# cpp_workspace

./: .gitignore  calculadora.cpp  exemplo_mod_acesso.cpp  gravap.cpp  leiturap.cpp
AudioPlay/: CMakeLists.txt  audio.cpp  sound_player
BenchmarkSmrtPtrs/: BenchmarkSmrtPtrs.pro  benchmark.cpp  benchmark.h  compile_commands.json  main.cpp  session.vim
BenchmarkSmrtPtrs/.clangd/index/: benchmark.cpp.7FDAE4C3D4044CBE.idx  benchmark.h.93E067654A0B9012.idx  main.cpp.9274E65CA5C34EB0.idx
ClosestToCenter/: CMakeLists.txt  closestToCenter.cpp
Edges/: CMakeLists.txt  main.cpp
ExemploConstrutor/: main  main.cpp
GeradorConsulta/: .qmake.stash  GeradorConsulta.pro  Makefile  Makefile.Debug  Makefile.Release  Resources.qrc  generator.cpp  generator.h  generator.ui  main.cpp  ui_generator.h
HungarianAlgorithm/: HungarianAlgorithm.pro  compile_commands.json  hungarianalgorithm.cpp  hungarianalgorithm.h  main.cpp
HungarianAlgorithm/.cache/clangd/index/: algs.h.E9093A2B6BAEC11B.idx  array.h.EE0F105AB3474270.idx  array2d.h.1CFD96FF2ED306D2.idx  array2d_generic_image.h.A78DE657F045198B.idx  array2d_kernel.h.DEA2DD7B5EEB7A33.idx  array2d_kernel_abstract.h.DD6AAC02CC931285.idx  array_kernel.h.A78A6A2D035AC514.idx  array_kernel_abstract.h.FDE7FC2A08FF5D5A.idx  array_tools.h.0877EF0B6B26D073.idx  array_tools_abstract.h.E24BBEE91B1D7987.idx  assert.h.D27B35C4DDCBCFE9.idx  async.h.73E57442E57D5388.idx  async_abstract.h.477019A616182BD6.idx  auto_mutex_extension.h.C24FC90FDB59A308.idx  auto_mutex_extension_abstract.h.5B41C07F2FA75BC6.idx  auto_unlock_extension.h.7586D286739E54A1.idx  config.h.393A7E919148457D.idx  (+175 more)
Inheritance/: a.out  inheritance.cpp
PCLTests/: CMakeLists.txt  ransac.cpp  region_growing_segmentation.cpp
PipelineTest/: mainwindow.cpp  mainwindow.h  mainwindow.ui
PositionOptimization/: CMakeLists.txt
PositionOptimization/src/: main.cpp
PostgresTest/: CMakeLists.txt  README.md  main.cpp
PostgresTest/include/: DBAbstractionLayer.hpp  MapsDB.hpp  NetworkDB.hpp  TimeScheduleDB.hpp
PrSBCbuildTest/: install_requirements.sh
PrSBCbuildTest/PrSBC/: CMakeLists.txt
PrSBCbuildTest/PrSBC/src/: main.cpp  prsbc.h  sym_prsbc.py
Tetris/: .clang-format  Tetris.pro  compile_commands.json  jogo.cpp  jogo.h  jogo.ui  main.cpp
Tetris/.clangd/index/: bloco.cpp.D03569DCA7A1ADD1.idx  bloco.h.74254BEA4D8DA0D4.idx  jogo.cpp.B6D66971695D3431.idx  jogo.h.48E886DEFB09DB23.idx  main.cpp.EC7C8CDD55EC59C8.idx  tela.cpp.E3FB51EE9E9EA26E.idx  tela.h.61BB626777432EB6.idx
Tetris/Bloco/: bloco.cpp  bloco.h
Tetris/Tela/: tela.cpp  tela.h
Tetris/Tetris/: tetris.cpp  tetris.h
dMPC/: CMakeLists.txt  dMPC.cpp
notcurses/: test  test.cpp
